# cgc-plugins-lib-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
src/cgcpluginlib/: __init__.py  cpl.py  general.py  geo.py  istream.py  istreambattery.py  istreamgeolocation.py  istreamgimbal.py  istreamsignalstrength.py  jsonobject.py  ostream.py  ostreamalphabitmap.py  ostreamgeoinfo.py  ostreamheatmap.py  ostreamvisual.py  pluginrequest.py  visualobject.py
