[project]
name = "cgcpluginlib"
version = "0.0.6"
authors = [
  { name="Cameron Chan", email="cameron.chan@advancednavigation.com" },
]
description = "CGC Plugin Library"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "watchdog==3.0.0",
    "argparse==1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/CloudGroundControl/cgc-plugins-lib-python"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
